# onnx-ops

./: .clang-format  .gitignore  CMakeLists.txt  create_excel.py  create_excel_cn.py  create_test_plan.py  onnx_sequence_ops_test_plan.xlsx  test_duplicate_indices.py  vcpkg.json
include/: matrix_dim_checker.h
include/ops/: compress.h  gather_element.h  gather_nd.h  global_max_pool.h  lp_normalization.h  lppool.h  scatter_elements.h  utils.h
py/: generate_test_data.py  lppool_test_LpPool_4D.json  run_test_data_generator.py  test.py  test_axis.py  test_compress.py  test_duplicate_indices.py  test_gather_element.py  test_gather_nd.py  test_global_max_pool.py  test_lp_normalization.py  test_lp_pool.py  test_non_max_suppression.py  test_sequence_at.py  test_sequence_construct.py  test_sequence_earse.py  test_sequence_insert.py  test_sequence_ops.py  tmp.py
source/: compress.h  gather_element.h  global_max_pool.h  lp_normalization.h  lppool.h  utils.h
src/: CMakeLists.txt  NonMaxSuppression.cpp  Sequence.cpp  inc.h  lppool_test_LpPool_3D.json  lppool_test_LpPool_5D.json  lppool_test_LpPool_5D_1.json  lppool_test_LpPool_5D_2.json  main.cpp  tmp.cpp
test/: CMakeLists.txt  test_gather_elements.cpp  test_gather_nd.cpp  test_global_max_pool.cpp  test_lp_normalization.cpp  test_scatter_elements.cpp
